# voly-labeller

./: .clang-format  .dockerignore  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Doxyfile  LICENSE.txt  README.md  add_dependencies.cmake  add_itk.cmake  git.md
assets/models/: anchor.dae  cameraOrigin.dae
assets/transferfunctions/: LIDC-IDRI-0469.gra  LIDC_IDRI.gra  LIDC_IDRI_lesions.gra  LIDC_IDRI_lesions_mask.gra  Siemens_Pulmo3D.gra  Siemens_Pulmo3D_scapula.gra  dice4.gra  (+11 more)
cmake_modules/: FindClipper.cmake
config/: LIDC-IDRI.xml  LIDC-IDRI_0469.xml  dice-simple.xml  dice.xml  heidelberg_delikt_messer.xml  heidelberg_delikt_messer_test.xml  heidelberg_schuss_cal45.xml  heidelberg_stich_schwangere_kind.xml  heidelberg_sturz.xml  human-and-big-head_behind.xml  human-and-big-head_silhouette_error.xml  human-only.xml  human.xml  logging.ini  mesh.xml  scene.xml  simple_state.xml  sponza.xml  states.xml  valgrind_suppressions.txt  volyviewer.xml  volyviewer.xml2
scenes/: 100-labels.xml  GRCH_head.xml  LIDC-IDRI.xml  LIDC-IDRI_0469.xml  artificial.xml  artificial3.xml  camera-test.xml  dice-simple.xml  dice.xml  grch.xml  heidelberg_delikt_messer.xml  heidelberg_delikt_messer2.xml  heidelberg_motorcycle.xml  heidelberg_schuss_cal45.xml  heidelberg_stich_schwangere_kind.xml  heidelberg_sturz2.xml  human-and-big-head-error.xml  human-and-big-head-error2.xml  human-and-big-head.xml  human-and-big-head_behind.xml  human-and-big-head_front.xml  human-and-big-head_silhouette_error.xml  human-only.xml  human-with-labels.xml  human.xml  jet-engine.xml  multi-volume.xml  pedestrian.xml  plane.xml  sponza.xml
scripts/: complete_coverage.sh  cpplint.py  cpu_test.cpp  create-paper-screenshots.sh  create-screenshots.sh  create-videos.sh  cuda_compute_capability.c  download_assets.sh  glslfilter.py  install_clipper.sh  install_dependencies.sh  install_gtest.sh  take-screenshots-in-3-modes.sh  take-screenshots-in-modes.sh
src/: CameraPositionsView.qml  ForcesTableView.qml  LabelsTableView.qml  NumberTextSliderInput.qml  PlacementWeightsTableView.qml  abstract_scene.h  application.cpp  application.h  camera.cpp  camera.h  camera_controller.cpp  camera_controller.h  camera_controllers.cpp  camera_controllers.h  camera_move_controller.cpp  camera_move_controller.h  camera_node.cpp  camera_node.h  camera_positions_model.cpp  camera_positions_model.h  camera_rotation_controller.cpp  camera_rotation_controller.h  camera_zoom_controller.cpp  camera_zoom_controller.h  collision.h  connector.cpp  connector.h  constraint_buffer.cpp  constraint_buffer.h  constraint_buffer_object.cpp  constraint_buffer_object.h  coordinate_system_node.cpp  coordinate_system_node.h  cube.cpp  cube.h  default_scene_creator.cpp  default_scene_creator.h  demo_scene.cpp  demo_scene.h  eigen.h  (+92 more)
src/VolyVideoModule/: CMakeLists.txt  ffmpeg_encoder.cpp  ffmpeg_encoder.hpp  ffmpegrecorder.cpp  ffmpegrecorder.h
src/forces/: CMakeLists.txt  anchor_depth_force.cpp  anchor_depth_force.h  anchor_force.cpp  anchor_force.h  center_force.cpp  center_force.h  force.cpp  force.h  label_collision_force.cpp  label_collision_force.h  label_state.cpp  label_state.h  labeller.cpp  labeller.h  labeller_frame_data.h  lines_crossing_force.cpp  lines_crossing_force.h  placement_force.cpp  placement_force.h
src/labelling/: CMakeLists.txt  clustering.cpp  clustering.h  label.cpp  label.h  label_positions.cpp  label_positions.h  labeller_frame_data.h  labels.cpp  labels.h  labels_container.cpp  labels_container.h
src/placement/: CMakeLists.txt  anchor_constraint_drawer.cpp  anchor_constraint_drawer.h  apollonius.cu  apollonius.h  apollonius_labels_arranger.cpp  apollonius_labels_arranger.h  boost_polygon_concepts.h  constraint_drawer.cpp  constraint_drawer.h  constraint_updater.cpp  constraint_updater.h  constraint_updater_base.h  constraint_updater_using_geometry_shader.cpp  constraint_updater_using_geometry_shader.h  cost_function_calculator.cu  cost_function_calculator.h  cuda_texture_3d_mapper.cpp  cuda_texture_3d_mapper.h  cuda_texture_mapper.cpp  cuda_texture_mapper.h  direct_integral_costs_calculator.cu  direct_integral_costs_calculator.h  distance_transform.cu  distance_transform.h  insertion_order_labels_arranger.cpp  insertion_order_labels_arranger.h  integral_costs_calculator.cu  integral_costs_calculator.h  integral_costs_weights.h  labeller.cpp  labeller.h  labels_arranger.h  occlusion.cu  occlusion.h  occlusion_calculator.cpp  occlusion_calculator.h  occupancy.cu  occupancy.h  occupancy_updater.cu  (+14 more)
test/: CMakeLists.txt  cuda_array_3d_mapper.h  cuda_array_mapper.h  image_comparer.h  main.cc  qimage_drawer_with_updating.h  test.h  test_camera.cc  test_camera_rotation_controller.cc  test_collision.cc  test_common_shader_functions.glsl  test_labels.cc  test_shader_program.cc  test_volume_reader.cc
test/forces/: test_anchor_force.cc  test_center_force.cc  test_label_collision_force.cc  test_labeller.cc  test_lines_crossing_force.cc  test_placement_force.cc
test/graphics/: test_buffer_hole_manager.cc  test_shader_program.cc
test/input/: test_scxml_importer.cc
test/labelling/: test_clustering.cc  test_label.cc
test/math/: test_aabb2d.cc  test_collision.cc  test_eigen.cc  test_obb.cc
test/placement/: mock_anchor_constraint_drawer.h  mock_shadow_constraint_drawer.h  test_apollonius.cc  test_apollonius.cu  test_constraint_updater.cc  test_cost_function_calculator.cc  test_cost_function_calculator.cu  test_direct_integral_costs_calculator.cc  test_distance_transform.cc  test_distance_transform.cu  test_integral_costs_calculator.cc  test_labeller.cc  test_occlusion.cc  test_occupancy.cc  test_occupancy_updater.cc  test_saliency.cc  test_summed_area_table.cc  test_summed_area_table.cu  test_to_gray.cc  test_to_gray.cu
test/test_shader/: commented_include.vert  commons.glsl  multiple_includes.vert  multiple_version_statements.vert  single_include.vert
test/utils/: test_gradient_utils.cc  test_image_persister.cc  test_persister.cc  test_qobject_persistence.cc  test_transfer_function_parser.cc
(+166 files in other folders)
